--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- BOOTSTRAP Links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="company.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- origin.fontawesome.com -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
