--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="row search">
                 <!-- Search Bar -->
                 <form class="col-lg-12 search-bar">
-                    <input class="search-input" type="search" placeholder="Howdy, Search for your subject"
+                    <input class="search-input" type="search" placeholder="Search here"
                         aria-label="Search">
                     <button class="btn btn-success btn-lg my-2 my-sm-0 lg-btn" type="submit">Search</button>
                 </form>
