--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
                     </button>
                 </div>
                 <div class="col-lg-6">
-                    <div class="mobile-img">
-                        <img src="images/mobile.png" alt="">
+                    <div class="mobile-img-div">
+                        <img src="images/mobile.png" class="mobile-img" alt="">
                     </div>
                 </div>
             </div>
