--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <a class="nav-link" href="">Feedback</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Articals</a>
+                        <a class="nav-link" href="">Articles</a>
                     </li>
                 </ul>
                 <!--  -->
