--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
     <section id="select-course">
         <div class="container-fluid select-course-fluid">
             <h1 class="select-course-h1tag">Select your notes by</h1>
-            <ul class="select-any-field">
-                <li data-tab-target="#home" class="two-tabs"><i class="fas fa-graduation-cap"></i> Colleges</li>
-                <li data-tab-target="#about" class="two-tabs"><i class="fas fa-cogs"></i> Courses
+            <ul class="select-any-field tabs">
+                <li data-tab-target="#home" class="two-tabs active tab"><i class="fas fa-graduation-cap"></i> Colleges</li>
+                <li data-tab-target="#about" class="two-tabs tab"><i class="fas fa-cogs"></i> Courses
                 </li>
             </ul>
             <div class="tab-content">
