--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <h1>What they say</h1>
 
         <div class="row">
-            <div id="testimonialcarousel" class="carousel slide" data-ride="carousel">
+            <div id="testimonialcarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active caro-li-items"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1" class="caro-li-items"></li>
