--- a/index.html
+++ b/index.html
@@ -42,68 +42,69 @@
 
     <!-- Header Contents -->
     <section id="title">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top fixed-top navbar">
-            <a class="navbar-brand h1" href="">
-                <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top logo-img" alt="">
-                Notes Pickup
-            </a>
-            <!--  -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!--  -->
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top fixed-top navbar">
+                <a class="navbar-brand h1" href="">
+                    <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top logo-img" alt="">
+                    Notes Pickup
+                </a>
+                <!--  -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                    aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!--  -->
 
-            <!-- Div class for collapse  -->
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <!-- Div class for collapse  -->
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 
-                <!--  Navbar Items -->
-                <ul class="navbar-nav ml-auto lists">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">About us</a>
-                    </li>
+                    <!--  Navbar Items -->
+                    <ul class="navbar-nav ml-auto lists">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">About us</a>
+                        </li>
 
-                    <!-- Explore DroupDown menu -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Services
-                        </a>
-                        <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div> -->
-                    </li>
+                        <!-- Explore DroupDown menu -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Services
+                            </a>
+                            <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div> -->
+                        </li>
+                        <!--  -->
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Feedback</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Articles</a>
+                        </li>
+                    </ul>
                     <!--  -->
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contact us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Feedback</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Articles</a>
-                    </li>
-                </ul>
+                    <!-- Search Bar -->
+                    <!-- <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form> -->
+                    <!--  -->
+                    <button type="button" class="btn btn-warning btn-md">Register/Login</button>
+                </div>
                 <!--  -->
 
-                <!-- Search Bar -->
-                <!-- <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form> -->
-                <!--  -->
-                <button type="button" class="btn btn-warning btn-md">Register/Login</button>
-            </div>
+            </nav>
             <!--  -->
-
-        </nav>
-        <!--  -->
-
+        </div>
         <!-- Title -->
         <div class="container-fluid get-the-best-section">
             <div class="row">
