--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top fixed-top navbar">
                 <a class="navbar-brand h1" href="">
-                    <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top logo-img" alt="">
+                    <img src="images/logoss.png" width="30" height="30" class="d-inline-block align-top logo-img"
+                        alt="">
                     Notes Pickup
                 </a>
                 <!--  -->
@@ -71,12 +72,12 @@
                                 Services
                             </a>
                             <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div> -->
+                            <a class="dropdown-item" href="#">Action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div> -->
                         </li>
                         <!--  -->
 
@@ -87,16 +88,16 @@
                             <a class="nav-link" href="">Feedback</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Articles</a>
+                            <a class="nav-link" href="">Articals</a>
                         </li>
                     </ul>
                     <!--  -->
 
                     <!-- Search Bar -->
                     <!-- <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form> -->
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form> -->
                     <!--  -->
                     <button type="button" class="btn btn-warning btn-md">Register/Login</button>
                 </div>
@@ -105,6 +106,7 @@
             </nav>
             <!--  -->
         </div>
+
         <!-- Title -->
         <div class="container-fluid get-the-best-section">
             <div class="row">
@@ -128,18 +130,18 @@
             <div class="info-students">
                 <div class="row info">
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">100000</b>
-                        <span class="under-text">Active Students</span>
+                        <b class="upper-text counter">250</b>
+                        <span class="under-text">Colleges</span>
                     </h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">25000</b>
-                        <span class="under-text">Teachers</span></h3>
+                        <b class="upper-text counter">250</b>
+                        <span class="under-text">Student Interns</span></h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">1000000</b>
-                        <span class="under-text">Pages</span></h3>
+                        <b class="upper-text counter">3000</b>
+                        <span class="under-text">Daily Visitors</span></h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">100000</b>
-                        <span class="under-text">Questions</span></h3>
+                        <b class="upper-text counter">80</b>
+                        <span class="under-text">Courses</span></h3>
                 </div>
             </div>
 
@@ -270,7 +272,8 @@
         <div class="container-fluid select-course-fluid">
             <h1 class="select-course-h1tag">Select your notes by</h1>
             <ul class="select-any-field tabs">
-                <li data-tab-target="#home" class="two-tabs active tab"><i class="fas fa-graduation-cap"></i> Colleges</li>
+                <li data-tab-target="#home" class="two-tabs active tab"><i class="fas fa-graduation-cap"></i> Colleges
+                </li>
                 <li data-tab-target="#about" class="two-tabs tab"><i class="fas fa-cogs"></i> Courses
                 </li>
             </ul>
@@ -403,8 +406,9 @@
                     <h1>Download Our Android App</h1>
                     <p>Keep your favourite notes in your pocket and access it whenever you need, even without internet.
                     </p>
-                    <a href="https://play.google.com/store/apps/details?id=in.lecturenotes.lecturenotes" target="_blank"><button
-                            type="button" class="btn btn-primary btn-lg btn-warning download-btn">Download Now <i
+                    <a href="https://play.google.com/store/apps/details?id=in.lecturenotes.lecturenotes"
+                        target="_blank"><button type="button"
+                            class="btn btn-primary btn-lg btn-warning download-btn">Download Now <i
                                 class="fas fa-download"></i>
                         </button>
                     </a>
@@ -493,38 +497,67 @@
         <div class="container-fluid footer-area">
             <div class="row">
                 <ul class="horizontal-list col-lg-2 col-md-2 col-sm-2">
-                    <li>About us</li>
-                    <li>Careers</li>
-                    <li>Report an Error</li>
-                    <li>Careers</li>
-                    <li>Report an Error</li>
+                    <div class="footer-title">
+                        <li>Have a Questions?</li>
+                    </div>
+                    <div class="all-footer-details">
+                        <li>+91 555 555 5555</li>
+                    </div>
+                    <div class="all-footer-details">
+                        <li>test@gmail.com</li>
+                    </div>
                 </ul>
                 <ul class="horizontal-list col-lg-2 col-md-2 col-sm-2">
-                    <li>Careers</li>
-                    <li>Report an Error</li>
-                    <li>About us</li>
-                    <li>Careers</li>
-                    <li>Report an Error</li>
+                    <div class="footer-title">
+                        <li>Recent Blog </li>
+                    </div>
+                    <div class="all-footer-details">
+                        <li>Effective ways to <br>
+                            Cram up for an exam!</li>
+                    </div>
+                    <div class="all-footer-details">
+                        <li>21 ways to keep up <br>with your notes</li>
+                    </div>
+                    <div class="all-footer-details">
+                        <li>Evils of Corruption</li>
+                    </div>
                 </ul>
                 <ul class="horizontal-list col-lg-2 col-md-2 col-sm-2">
-                    <li>Careers</li>
-                    <li>Report an Error</li>
-                    <li>About us</li>
-                    <li>Careers</li>
-                    <li>Report an Error</li>
+                    <div class="footer-title">
+                        <li>Links</li>
+                    </div>
+                    <div class="all-footer-details last">
+                        <li>About</li>
+                    </div>
+                    <div class="all-footer-details last">
+                        <li>Services</li>
+                    </div>
+                    <div class="all-footer-details last">
+                        <li>Recent Blogs</li>
+                    </div>
+                    <div class="all-footer-details last">
+                        <li>Contact</li>
+                    </div>
+                    <div class="all-footer-details last">
+                        <li>Query</li>
+                    </div>
                 </ul>
 
 
                 <div class="col-lg-4 download-app-class-links">
-                    <a href="https://play.google.com/store/apps/details?id=in.lecturenotes.lecturenotes"
+                    <div class="form-group">
+                        <input type="text" class="form-control mb-2 text-center" name="emailid" id="emailid"
+                            placeholder="Enter email address">
+                        <input type="submit" value="Subscribe" class="form-control submit px-3">
+                    </div>
+                    <!-- <a href="https://play.google.com/store/apps/details?id=in.lecturenotes.lecturenotes"
                         target="_blank"><img src="images/googleplay.png" alt=""></a>
                     <a href="https://apps.apple.com/us/app/lecturenotes-learner/id1482508043?ls=1" target="_blank">
                         <img src="images/appstore.png" alt="">
-                    </a>
+                    </a> -->
 
                     <hr>
-                    <p class="email">support@lecturenotes.in</p>
-                    <hr>
+                    <p class="email">Connect With Us</p>
                     <div class="all-icons">
                         <div class="footer-icons">
                             <i class="fab fa-twitter lastlogos"></i>
