replace new html code

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top fixed-top navbar">
                 <a class="navbar-brand h1" href="">
-                    <img src="images/logoss.png" width="30" height="30" class="d-inline-block align-top logo-img"
-                        alt="">
+                    <img src="images/CenteredLOGOn15.png" width="30" height="30"
+                        class="d-inline-block align-top logo-img" alt="">
                     Notes Pickup
                 </a>
                 <!--  -->
@@ -62,7 +62,7 @@
                     <!--  Navbar Items -->
                     <ul class="navbar-nav ml-auto lists">
                         <li class="nav-item">
-                            <a class="nav-link" href="">About us</a>
+                            <a class="nav-link" href="">Articles</a>
                         </li>
 
                         <!-- Explore DroupDown menu -->
@@ -88,7 +88,7 @@
                             <a class="nav-link" href="">Feedback</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Articals</a>
+                            <a class="nav-link" href="">About us</a>
                         </li>
                     </ul>
                     <!--  -->
@@ -99,7 +99,7 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form> -->
                     <!--  -->
-                    <button type="button" class="btn btn-warning btn-md">Register/Login</button>
+                    <button type="button" class="btn btn-warning btn-md">Notes</button>
                 </div>
                 <!--  -->
 
@@ -130,18 +130,18 @@
             <div class="info-students">
                 <div class="row info">
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">250</b>
+                        <b class="upper-text counter">500</b>
                         <span class="under-text">Colleges</span>
                     </h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">250</b>
+                        <b class="upper-text counter">550</b>
                         <span class="under-text">Student Interns</span></h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">3000</b>
+                        <b class="upper-text counter">2000</b>
                         <span class="under-text">Daily Visitors</span></h3>
                     <h3 class="text-center col-lg-3 col-md-6">
-                        <b class="upper-text counter">80</b>
-                        <span class="under-text">Courses</span></h3>
+                        <b class="upper-text counter">70000</b>
+                        <span class="under-text">Notes pdf</span></h3>
                 </div>
             </div>
 
@@ -285,13 +285,13 @@
                         <li class="li-border">Electrical Engineering</li>
                         <li class="li-border">Information Technology</li>
                         <li class="li-border">Electrical Engineering</li>
-
-                        <li class="li-border">Electrical Engineering</li>
-                        <li class="li-border">Information Technology</li>
-                        <li class="li-border">Electrical Engineering</li>
-                        <li class="li-border">Information Technology</li>
-                        <li class="li-border">Electrical Engineering</li>
-
+                        <div class="second-tab">
+                            <li class="li-border">Electrical Engineering</li>
+                            <li class="li-border">Information Technology</li>
+                            <li class="li-border">Electrical Engineering</li>
+                            <li class="li-border">Information Technology</li>
+                            <li class="li-border">Electrical Engineering</li>
+                        </div>
                     </ul>
                 </div>
                 <div id="about" data-tab-content>
@@ -427,10 +427,10 @@
     <!-- Testimonials section-->
     <section id="testimonials">
 
-        <h1>What they say</h1>
+        <h1>Student Says About Us</h1>
 
         <div class="row">
-            <div id="testimonialcarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active caro-li-items"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1" class="caro-li-items"></li>
@@ -501,15 +501,15 @@
                         <li>Have a Questions?</li>
                     </div>
                     <div class="all-footer-details">
-                        <li>+91 555 555 5555</li>
+                        <li>+91 9927468766</li>
                     </div>
                     <div class="all-footer-details">
-                        <li>test@gmail.com</li>
+                        <li>contact@notespickup.com</li>
                     </div>
                 </ul>
                 <ul class="horizontal-list col-lg-2 col-md-2 col-sm-2">
                     <div class="footer-title">
-                        <li>Recent Blog </li>
+                        <li>Articles </li>
                     </div>
                     <div class="all-footer-details">
                         <li>Effective ways to <br>
@@ -527,7 +527,7 @@
                         <li>Links</li>
                     </div>
                     <div class="all-footer-details last">
-                        <li>About</li>
+                        <li>About us</li>
                     </div>
                     <div class="all-footer-details last">
                         <li>Services</li>
@@ -539,14 +539,16 @@
                         <li>Contact</li>
                     </div>
                     <div class="all-footer-details last">
-                        <li>Query</li>
+                        <li>Feedback</li>
                     </div>
                 </ul>
 
-
                 <div class="col-lg-4 download-app-class-links">
+                    <div class="sub-scribe-div">
+                        <h3 class="sub-scribe-h3tag">Subscribe Us!</h3>
+                    </div>
                     <div class="form-group">
-                        <input type="text" class="form-control mb-2 text-center" name="emailid" id="emailid"
+                        <input type="text" class="form-control mb-2 contant-center" name="emailid" id="emailid"
                             placeholder="Enter email address">
                         <input type="submit" value="Subscribe" class="form-control submit px-3">
                     </div>
@@ -557,20 +559,30 @@
                     </a> -->
 
                     <hr>
-                    <p class="email">Connect With Us</p>
+                    <div class="connect-us-text">
+                        <p class="email">Connect With Us</p>
+                    </div>
                     <div class="all-icons">
                         <div class="footer-icons">
-                            <i class="fab fa-twitter lastlogos"></i>
+                            <a href="#">
+                                <img src="images/facebook.png" alt="">
+                            </a>
+                            <!-- <i class="fab fa-twitter lastlogos"></i> -->
                         </div>
                         <div class="footer-icons">
-                            <i class="fab fa-facebook lastlogos"></i>
+                            <a href="https://www.instagram.com/notespickup/">
+                                <img src="images/instagram.png" alt="">
+                            </a>
+                            <!-- <i class="fab fa-facebook lastlogos"></i> -->
                         </div>
                         <div class="footer-icons">
-                            <i class="fab fa-instagram lastlogos"></i>
+                            <a href="https://www.linkedin.com/company/notespickup123" target="_blank"><img
+                                    src="images/linkedin.png" alt=""></a>
+                            <!-- <i class="fab fa-instagram lastlogos"></i> -->
                         </div>
-                        <div class="footer-icons">
+                        <!-- <div class="footer-icons">
                             <i class="fas fa-envelope-square lastlogos"></i>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
