--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <!-- select-course section -->
     <section id="select-course">
         <div class="container-fluid select-course-fluid">
-            <h1 class="select-course-h1tag">Select your notes by</h1>
+            <h1 class="select-course-h1tag">Select</h1>
             <ul class="select-any-field tabs">
                 <li data-tab-target="#home" class="two-tabs active tab"><i class="fas fa-graduation-cap"></i> Colleges
                 </li>
@@ -532,11 +532,11 @@
                     <div class="all-footer-details last">
                         <li>Services</li>
                     </div>
-                    <div class="all-footer-details last">
+<!--                     <div class="all-footer-details last">
                         <li>Recent Blogs</li>
-                    </div>
+                    </div> -->
                     <div class="all-footer-details last">
-                        <li>Contact</li>
+                        <li>Contact us</li>
                     </div>
                     <div class="all-footer-details last">
                         <li>Feedback</li>
